Make bridge sync synchronized